--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
         </button>
 
         <!-- newEmail--active -->
-        <form (submit) = "handleNewEmail($event)" class="newEmail cmailForm" [ngClass] = "{'newEmail--active': isNewEmailFormOpen}">
+        <form #formEmail="ngForm" (ngSubmit)="handleNewEmail(formEmail)" class="newEmail cmailForm" [ngClass]="{'newEmail--active': isNewEmailFormOpen}">
           <div class="newEmail__card demo-card-wide mdl-card mdl-shadow--2dp">
             <div class="newEmail__titleArea mdl-card__title">
               <h2 class="newEmail__title mdl-card__title-text">Novo Email</h2>
@@ -29,8 +29,8 @@
               <!-- Form Fields -->
               <!-- [Para] -->
               <div class="cmailInputForm">
-                <div class="mdl-textfield mdl-textfield--floating-label">
-                  <input required type="email" name="para" id="para" placeholder=" " class="mdl-textfield__input" (input) = "email.destinatario = $event.target.value" [value] = "email.destinatario">
+                <div class="mdl-textfield mdl-textfield--floating-label" [ngClass]="{'is-invalid': destinatario.invalid && destinatario.touched}">
+                  <input #destinatario="ngModel" [(ngModel)]="email.destinatario" required type="email" email name="para" id="para" class="mdl-textfield__input">
                   <span class="mdl-textfield__error">Informar um email é obrigatório!</span>
                   <label class="mdl-textfield__label" for="para">Para: </label>
                   <span class="mdl-textfield__formline"></span>
@@ -39,8 +39,8 @@
 
               <!-- [Assunto] -->
               <div class="cmailInputForm">
-                <div class="mdl-textfield mdl-textfield--floating-label">
-                  <input required type="text" name="assunto" id="assunto" placeholder=" " class="mdl-textfield__input" (input) = "email.assunto = $event.target.value" [value] = "email.assunto">
+                <div class="mdl-textfield mdl-textfield--floating-label" [ngClass]="{'is-invalid': assunto.invalid && assunto.touched}">
+                  <input #assunto="ngModel" [(ngModel)]="email.assunto" required type="text" name="assunto" id="assunto" class="mdl-textfield__input">
                   <span class="mdl-textfield__error">Informar um assunto é obrigatório!</span>
                   <label class="mdl-textfield__label" for="assunto">Assunto: </label>
                   <span class="mdl-textfield__formline"></span>
@@ -50,7 +50,7 @@
               <!-- [Conteúdo] -->
               <div class="cmailInputForm">
                 <div class="mdl-textfield mdl-textfield--floating-label">
-                  <textarea name="conteudo" id="conteudo" placeholder=" " class="mdl-textfield__input" (input) = "email.conteudo = $event.target.value" [value] = "email.conteudo"></textarea>
+                  <textarea #conteudo="ngModel" [(ngModel)]="email.conteudo" name="conteudo" id="conteudo" class="mdl-textfield__input"></textarea>
                   <span class="mdl-textfield__error">Informar um conteúdo é obrigatório!</span>
                   <label class="mdl-textfield__label" for="conteudo">Conteúdo: </label>
                   <span class="mdl-textfield__formline"></span>
